# nlp-menu-intelligence

./: .gitignore  DEPLOYMENT.md  Makefile  PROJECT_PLAN.md  README.md  compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: bio2_extraction.py  category_classifier.py  category_model_features.py  document_parser.py  image_ocr.py  main.py  menu_parser.py  schemas.py
backend/app/model_assets/: category_classifier.json  category_classifier.pkl
backend/app/model_assets/backups/2026-03-27-tfidf-logreg-items-v2-1.0.0/: category_classifier.json  category_classifier.pkl
backend/tests/: conftest.py  test_category_classifier.py  test_dataset_stats.py  test_document_parser.py  test_eval_bio2_extraction_baseline.py  test_eval_heuristic_baseline.py  test_eval_realworld_pipeline.py  test_export_bio2_dataset.py  test_image_ocr.py  test_main.py  test_menu_parser.py  test_tfidf_calibrated_linear_svm_baseline.py  test_tfidf_enriched_logreg_baseline.py  test_tfidf_linear_svm_baseline.py  test_tfidf_logreg_baseline.py  test_tfidf_union_logreg_baseline.py  test_train_bio2_token_classifier.py  test_train_transformer_classifier.py  test_verify_backend_runtime.py
data/: README.md
data/annotated/: items.sample.jsonl  items.v1.jsonl  items.v2.jsonl
data/eval/: realworld-gold.v1.jsonl  realworld-manifest.v1.csv
data/interim/: dataset-stats.v1.json  dataset-stats.v2.json  items.v2.bio2.jsonl
data/raw/: dataset-manifest-template.csv  dataset-manifest.sample.csv  dataset-manifest.v1.csv  dataset-manifest.v2.csv
docs/course/: README.md  annotation-guide.md  dataset.md  experiments.md  live-smoke-checklist.md  live-smoke-log.md  problem-statement.md  related-work.md  report-checklist.md  results-log.md  workstreams.md
docs/course/artifacts/: baseline-heuristic-items-v2.json  baseline-heuristic-results.json  (+15 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  style.css
ops/: remote_deploy.sh  remote_sync.sh
ops/nginx/: nlp.philippov.dev.conf
report/: README.md  lit.bib  main.tex
scripts/: bio2_dataset_common.py  category_model_builders.py  classification_baseline_common.py  dataset_common.py  eval_bio2_extraction_baseline.py  eval_heuristic_baseline.py  eval_realworld_pipeline.py  export_bio2_dataset.py  export_category_classifier.py  generate_dataset_stats.py  run_tfidf_calibrated_linear_svm_baseline.py  run_tfidf_enriched_logreg_baseline.py  run_tfidf_linear_svm_baseline.py  run_tfidf_logreg_baseline.py  run_tfidf_union_logreg_baseline.py  search_sparse_category_models.py  train_bio2_token_classifier.py  train_transformer_classifier.py  verify_backend_runtime.py  verify_ocr_runtime.py
(+9 files in other folders)
