[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menu-intelligence-api"
version = "0.0.1"
description = "FastAPI backend for the NLP menu intelligence project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.12.5,<1.0.0"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

